# Devpad

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .lsan.supp  AppHelper.vb  CHANGELOG.md  CMakeLists.txt  CodeEditor.vb  Devpad.psess  Devpad.sln  Devpad.vbproj  FileTab.vb  LICENSE  MainWindow.xaml  MainWindow.xaml.vb  README.md  TabHeader.xaml  TabHeader.xaml.vb  app.config
.github/workflows/: ci.yml
.opencode/skills/devpad/: SKILL.md
Dialogs/: AdWindow.xaml  AdWindow.xaml.vb  MessageBoxDialog.xaml.vb
Dialogs/Edit/: FindDialog.xaml  FindDialog.xaml.vb  GoToDialog.xaml  GoToDialog.xaml.vb  ReplaceDialog.xaml  ReplaceDialog.xaml.vb
Dialogs/File/: NewFileDialog.xaml  NewFileDialog.xaml.vb  PrintPreviewDialog.xaml  PrintPreviewDialog.xaml.vb
Dialogs/File/Export/: EmailDialog.xaml  EmailDialog.xaml.vb  ExportFTPDialog.xaml  ExportFTPDialog.xaml.vb  FtpClient.vb  WordpressDialog.xaml  WordpressDialog.xaml.vb
Dialogs/Help/: AboutDialog.xaml  AboutDialog.xaml.vb  UpdateDialog.xaml  UpdateDialog.xaml.vb
Dialogs/Tools/: EditExToolDialog.xaml  EditExToolDialog.xaml.vb  ExternalToolsDialog.xaml  ExternalToolsDialog.xaml.vb  OptionsDialog.xaml  OptionsDialog.xaml.vb
My Project/: AssemblyInfo.vb  Resources.Designer.vb  Resources.resx  Settings.Designer.vb  Settings.settings
Syntax/: asm.xshd  css.xshd  gml.xshd  ini.xshd  lua.xshd  perl.xshd  sql.xshd
Templates/Misc/: misc.gml
cmake/: build_qscintilla.cmake  replace_in_file.cmake
flatpak/: com.semagsoft.Devpad.yml
i18n/: devpad_de.ts  devpad_es.ts  devpad_fr.ts
installer/: Devpad.wxs  LICENSE.rtf  installer.nsi  svg2ico.py
qscintilla-build/: .qmake.stash  moc_SciClasses.cpp  moc_ScintillaQt.cpp  moc_predefs.h  moc_qsciabstractapis.cpp  moc_qsciapis.cpp  moc_qscilexer.cpp  moc_qscilexerasm.cpp  moc_qscilexeravs.cpp  moc_qscilexerbash.cpp  moc_qscilexerbatch.cpp  moc_qscilexercmake.cpp  moc_qscilexercoffeescript.cpp  moc_qscilexercpp.cpp  moc_qscilexercsharp.cpp  moc_qscilexercss.cpp  moc_qscilexercustom.cpp  moc_qscilexerd.cpp  moc_qscilexerdiff.cpp  moc_qscilexeredifact.cpp  moc_qscilexerfortran.cpp  moc_qscilexerfortran77.cpp  moc_qscilexerhex.cpp  moc_qscilexerhtml.cpp  moc_qscilexeridl.cpp  moc_qscilexerintelhex.cpp  moc_qscilexerjava.cpp  moc_qscilexerjavascript.cpp  moc_qscilexerjson.cpp  moc_qscilexerlua.cpp  moc_qscilexermakefile.cpp  moc_qscilexermarkdown.cpp  moc_qscilexermasm.cpp  moc_qscilexermatlab.cpp  moc_qscilexernasm.cpp  moc_qscilexeroctave.cpp  moc_qscilexerpascal.cpp  moc_qscilexerperl.cpp  moc_qscilexerpo.cpp  moc_qscilexerpostscript.cpp  (+17 more)
resources/: Devpad.icns  Info.plist  appicon.rc  com.semagsoft.Devpad.desktop  com.semagsoft.Devpad.metainfo.xml  fileicons.json  resources.qrc  theme.qss
resources/color-schemes/: DevpadAyuDark.colorscheme  DevpadAyuLight.colorscheme  DevpadCatppuccinFrappe.colorscheme  DevpadCatppuccinLatte.colorscheme  DevpadCatppuccinMacchiato.colorscheme  DevpadCatppuccinMocha.colorscheme  DevpadDark.colorscheme  DevpadDracula.colorscheme  DevpadGruvboxDark.colorscheme  DevpadLight.colorscheme  DevpadMonokai.colorscheme  DevpadNord.colorscheme  DevpadOneDark.colorscheme  DevpadSolarizedLight.colorscheme  DevpadTokyoNight.colorscheme  DevpadTokyoNightStorm.colorscheme
resources/snippets/: default.json
scripts/: build-msi.ps1  package-appimage.sh  package-linux.sh  package-macos.sh
src/: appstrings.h  codeeditor.cpp  codeeditor.h  defaultsyntax.h  devpad_version.h.in  editorcontroller.cpp  editorcontroller.h  encodingutils.cpp  encodingutils.h  gitignore.cpp  gitignore.h  keywords.cpp  keywords.h  languageinfo.cpp  languageinfo.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  snippet.cpp  snippet.h  snippetengine.cpp  snippetengine.h  theme.cpp  theme.h  themeapplier.cpp  themeapplier.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  dialogsettings.h  externaltoolsdialog.cpp  externaltoolsdialog.h  finddialog.cpp  finddialog.h  findinfilesdialog.cpp  findinfilesdialog.h  findsymbolsdialog.cpp  findsymbolsdialog.h  optionsdialog.cpp  optionsdialog.h  replacedialog.cpp  replacedialog.h
src/lsp/: lspclient.cpp  lspclient.h  lspeditorintegration.cpp  lspeditorintegration.h  lspindicators.h  lspjsonrpc.cpp  lspjsonrpc.h  lspservermanager.cpp  lspservermanager.h  lsptypes.cpp  lsptypes.h
src/managers/: actionmanager.cpp  actionmanager.h  backupmanager.cpp  backupmanager.h  encodingmanager.cpp  encodingmanager.h  encodingmenuhelper.cpp  encodingmenuhelper.h  externaltoolmanager.cpp  externaltoolmanager.h  filemanager.cpp  filemanager.h  filewatchermanager.cpp  filewatchermanager.h  printmanager.cpp  printmanager.h  recentfileshelper.cpp  recentfileshelper.h  remotefileservice.cpp  remotefileservice.h  searchmanager.cpp  searchmanager.h  sessionmanager.cpp  sessionmanager.h  settingsmanager.cpp  settingsmanager.h  snippetmanager.cpp  snippetmanager.h  tabmanager.cpp  tabmanager.h
src/panels/: draggabletabbar.cpp  draggabletabbar.h  errorlistpanel.cpp  errorlistpanel.h  projectpanel.cpp  projectpanel.h  splitview.cpp  splitview.h  terminalbackend.cpp  terminalbackend.h  terminalbackend_kodoterm.cpp  terminalbackend_kodoterm.h  terminalbackend_qtermwidget.cpp  terminalbackend_qtermwidget.h  terminalpanel.cpp  terminalpanel.h
src/widgets/: editorcontainer.cpp  editorcontainer.h  inlinefindbar.cpp  inlinefindbar.h  themepreviewwidget.cpp  themepreviewwidget.h
tests/: main.cpp  test_actionmanager.cpp  test_appstrings.cpp  test_backupmanager.cpp  test_codeeditor.cpp  test_editorcontroller.cpp  test_encodingmanager.cpp  test_encodingutils.cpp  test_externaltoolmanager.cpp  test_filemanager.cpp  test_filewatchermanager.cpp  test_integration.cpp  test_keywords.cpp  test_languageinfo.cpp  test_logger.cpp  test_lspjsonrpc.cpp  test_lsptypes.cpp  test_mainwindow.cpp  test_printmanager.cpp  test_remotefileservice.cpp  test_searchmanager.cpp  test_sessionmanager.cpp  test_settingsmanager.cpp  test_snippet.cpp  test_snippetmanager.cpp  test_splitview.cpp  test_tabmanager.cpp  test_theme.cpp  test_themeapplier.cpp
(+2 files in other folders)
